# NIGEL-hackathon

./: README.md  export (1).geojson  export (2).geojson  features.md  styling.md
frontend/: generate-cert.sh  package-lock.json  package.json  server.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agent/: route.ts
frontend/app/api/feeds/[name]/: route.ts
frontend/app/api/state/: route.ts
frontend/app/api/tts/: route.ts
frontend/app/dispatcher/: ThreeScene.tsx  page.tsx
frontend/app/firefighter/: page.tsx
frontend/app/threejs-cloud/: page.jsx
frontend/components/: camera-websocket-feed.tsx  three-scene.tsx
frontend/docs/: WEBSOCKET_ARCHITECTURE.md
frontend/hooks/: use-slam-projection.ts
frontend/lib/: camera-websocket.ts  tts.ts  websocket-manager.ts
frontend/public/data/: student-services.geojson
frontend/store/: slam-store.ts
ros2/: convert_pcd_to_mesh  convert_pcd_to_mesh.cpp  pcd_to_gazebo_model.py  prompt.md
ros2/image/: cam_in_ex.txt
ros2/my_scan_model/: model.config  model.sdf
ros2/my_scan_model/meshes/: scan_mesh.mtl
ros2/src/odin_ros_driver/config/: control_command.yaml
ros2/src/slam_cloud_accumulator/: CMakeLists.txt  WEBSOCKET_API.md  package.xml
ros2/src/slam_cloud_accumulator/src/: slam_cloud_accumulator.cpp
